# FinTech

./: .gitignore  README.md  index.html  pyproject.toml
docs/: ch4_citations_and_evidence_retrieval.md  ch4_embedding_retrieval_plan.md  ch4_fincpa_dashboard_guide.md  ch4_fincpa_end_to_end_team_walkthrough.md  ch4_fincpa_layer1_annotation_guide.md  ch4_fincpa_layer1_explanation_and_analysis.md  ch4_fincpa_layer2_decomposition_guide.md  ch4_fincpa_layer2_explanation_and_analysis.md  ch4_fincpa_layer3_explanation_and_analysis.md  ch4_fincpa_layer3_rule_compilation_guide.md  ch4_fincpa_layer4_explanation_and_analysis.md  ch4_fincpa_manual_verification_checklist.md  ch4_fincpa_parsing_method.md  ch4_fincpa_pipeline_technical_book.md  ch4_post_deterministic_workflow.md  ch4_runtime_execution_report.md  ch4_runtime_flow_dashboard.md  ch4_runtime_non_llm_workflow.md
scripts/: annotate_ch4_layer1_with_gemini.py  build_ch4_dashboard_bundle.py  build_ch4_embedding_corpus.py  build_ch4_embedding_index.py  build_ch4_layer1_annotation_sheet.py  build_ch4_layer2_review_priority.py  build_ch4_layer3_review_priority.py  build_ch4_layer4_mvp_artifacts.py  build_ch4_retrieval_queries.py  build_ch4_runtime_dashboard_bundle.py  build_layer1_review_priority_sheet.py  compile_ch4_layer3_with_gemini.py  decompose_ch4_layer2_with_gemini.py  parse_fincpa_ch4_dataset.py  prefill_ch4_layer1_annotations.py  run_ch4_dashboard.py  run_ch4_example_suite.py  run_ch4_gemini_advisory.py  run_ch4_gemini_advisory_suite.py  run_ch4_non_llm_workflow.py  run_ch4_postprocess_pipeline.py  (+6 more)
(+133 files in other folders)
